# TradingView-Screener

./: .gitignore  LICENSE  PROGRESS.md  README.md  pyproject.toml  requirements.txt  run_drawdown_screener.py  screener_drawdown.py  test_tv_scanner.py  tv_scanner.py
.github/: FUNDING.yml
.github/workflows/: docs-release.yml  docs.yml  test.yml
data/: column_display_names.json  markets.json
data/metainfo/: bond.json  bonds.json  cfd.json  coin.json  crypto.json  economics2.json  forex.json  futures.json  ireland.json  options.json  stocks.json
data/screeners/: main_screeners.json  markets.json  stocks.json  stocks_failed.json
docs/: CNAME  index.html  markets.html  screener.html  tradingview_screener.html
docs/2.4.1/: search.js  tradingview_screener.html
docs/2.4.1/tradingview_screener/: constants.html  query.html  util.html
docs/2.5.0/tradingview_screener/: screener.html
docs/2.5.0rc0/: tradingview_screener.html
docs/2.5.0rc0/static/: bonds_fields.html  cfd_fields.html  economics2_fields.html  forex_fields.html  futures_fields.html
docs/2.5.0rc0/tradingview_screener/: util.html
docs/2.6.0rc0/: search.js
docs/2.6.0rc0/static/: bonds_fields.html  cfd_fields.html  coin_fields.html  crypto_fields.html  economics2_fields.html  forex_fields.html  futures_fields.html  options_fields.html  stocks_fields.html
docs/2.6.0rc0/tradingview_screener/: column.html  constants.html  query.html
docs/3.0.0-rc.1/: tradingview_screener.html
docs/3.0.0-rc.1/tradingview_screener/: constants.html  models.html  query.html
docs/3.0.0/tradingview_screener/: column.html  query.html
docs/3.2.0/: tradingview_screener.html
docs/3.2.0/tradingview_screener/: column.html  query.html  screeners.html  util.html
docs/3.2.1/: index.html
docs/3.2.1/tradingview_screener/: query.html
docs/dev/: search.js  tradingview_screener.html
docs/dev/tradingview_screener/: column.html  models.html  query.html  screeners.html  util.html
docs/fields/: bond.html  bonds.html  cfd.html  coin.html  crypto.html  economics2.html  forex.html  futures.html  ireland.html  options.html  stocks.html
docs/latest/: search.js  tradingview_screener.html
docs/latest/tradingview_screener/: column.html  constants.html  query.html  util.html
docs/master/: search.js
docs/master/tradingview_screener/: constants.html  query.html
docs/screeners/: main_screeners.html
docs/screeners/stocks/: america.html  argentina.html  australia.html  austria.html  bahrain.html  bangladesh.html  belgium.html  brazil.html  canada.html  chile.html  china.html  colombia.html  cyprus.html  czech.html  denmark.html  egypt.html  estonia.html  finland.html  france.html  germany.html  global.html  greece.html  hongkong.html  hungary.html  iceland.html  india.html  indonesia.html  ireland.html  israel.html  italy.html  japan.html  kenya.html  korea.html  ksa.html  kuwait.html  latvia.html  lithuania.html  luxembourg.html  malaysia.html  mexico.html  (+29 more)
fields/: bonds.html  cfd.html  coin.html  crypto.html  economics2.html  forex.html  futures.html  options.html  stocks.html
src/: auth_config.pickle
src/tradingview_screener/: __init__.py  column.py  constants.py  models.py  query.py  screener.py  screeners.py  util.py
static/: columns.html
templates/: fields.html.jinja2  module.html.jinja2
tests/: test_query.py  test_readme.py  test_screeners.py
tradingview_screener/: __init__.py  __main__.py  constants.py  query.py  screener.py
