[tool.poetry]
name = "tradingview-screener"
version = "2.4.1"
description = "A package for creating stock screeners with the TradingView API"
authors = ["shner-elmo <770elmo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tradingview_screener", from = "src"}]
repository = "https://github.com/shner-elmo/TradingView-Screener"
documentation = "https://github.com/shner-elmo/TradingView-Screener/blob/master/README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
pandas = "^2.1.2"
requests = "^2.31.0"
browser-cookie3 = "^0.19.1"
parsel = "^1.9.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
ruff = "^0.1.3"
pdoc = "^14.1.0"
pytest = "^7.4.3"
black = "^24.4.2"
mypy = "^1.10.0"
pyright = "^1.1.364"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"
line-length = 100

# BUG: it seems like these rules arent being enforced by ruff
[tool.ruff.pycodestyle]
max-line-length = 100
max-doc-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.flake8-errmsg]
max-string-length = 20

[pycodestyle]
max-doc-length = 100

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.pyright]
include = ["src/tradingview_screener/query.py"]
#include = ["src"]
#exclude = ["**/node_modules",
#    "**/__pycache__",
#    "src/experimental",
#    "src/typestubs"
#]
#ignore = ["src/oldstuff"]
#defineConstant = { DEBUG = true }
#stubPath = "src/stubs"
#
#reportMissingImports = true
#reportMissingTypeStubs = false
#
#pythonVersion = "3.6"
#pythonPlatform = "Linux"
#
#executionEnvironments = [
#  { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [ "src/service_libs" ] },
#  { root = "src/sdk", pythonVersion = "3.0", extraPaths = [ "src/backend" ] },
#  { root = "src/tests", extraPaths = ["src/tests/e2e", "src/sdk" ]},
#  { root = "src" }
]
