[project]
name = "tradingview-screener"
version = "3.0.0"
description = "A package for creating stock screeners with the TradingView API"
authors = [{name = "shner-elmo", email = "770elmo@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2,<3",
    "pandas>=2,<3",
]

[project.urls]
Repository = "https://github.com/shner-elmo/TradingView-Screener"
Documentation = "https://github.com/shner-elmo/TradingView-Screener/blob/master/README.md"

[dependency-groups]
dev = [
    "ipython>=8.16.1",
    "ruff>=0.1.3",
    "pdoc>=15.0.0",
    "pytest>=7.4.3",
    "pyright>=1.1.364",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradingview_screener"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.flake8-errmsg]
max-string-length = 20

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.9"
include = [
    "src/tradingview_screener/**",
    "tests",
]
